0026990: Compiler warnings in LDOM_OSStream.hxx

Signature of methods xsputn() and overflow() of the class LDOM_SBuffer is corrected to correspond to signature of overriden virtual methods of std::streambuf.